fix: Resolved dropdown hover flicker issue

--- a/src/components/AccountDropdown/AccountDropdown.css
+++ b/src/components/AccountDropdown/AccountDropdown.css
@@ -20,6 +20,10 @@
   animation: fadeIn 0.2s;
 }
 
+#appear-without-transition {
+  opacity: 1;
+}
+
 #disappear {
   /* `fill-mode: forwards`, to prevent fadeIn after fadeOut */
   animation: fadeOut 0.2s forwards;
